--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     implementation 'org.jsoup:jsoup:1.15.3'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'androidx.preference:preference:1.1.+'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
